[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Singletons/PopupMessage/popupmessage.gd" type="Script" id=3]

[node name="popupmessage" type="CanvasLayer"]
layer = 101
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.32
anchor_top = 0.36
anchor_right = 0.68
anchor_bottom = 0.64

[node name="Button" type="Button" parent="Control/Panel"]
anchor_left = 0.958
anchor_top = -0.0262346
anchor_right = 1.01417
anchor_bottom = 0.0257654
margin_right = 1.68005
margin_bottom = 8.304
text = "X"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "POPUPMESSAGE"
align = 1
valign = 1

[node name="alt_Label" type="Label" parent="Control/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 0.65
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
text = "POPUPMESSAGE"
align = 1
valign = 1
autowrap = true

[node name="choices" type="HBoxContainer" parent="Control/Panel"]
visible = false
anchor_left = 0.1
anchor_top = 0.65
anchor_right = 0.9
anchor_bottom = 0.98
custom_constants/separation = 64

[node name="deny_choice" type="Button" parent="Control/Panel/choices"]
margin_right = 198.0
margin_bottom = 71.0
size_flags_horizontal = 3
text = "DENY"
script = ExtResource( 1 )

[node name="accept_choice" type="Button" parent="Control/Panel/choices"]
margin_left = 262.0
margin_right = 460.0
margin_bottom = 71.0
size_flags_horizontal = 3
text = "ACCEPT"
script = ExtResource( 1 )

[connection signal="pressed" from="Control/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Panel/choices/deny_choice" to="." method="_on_deny_choice_pressed"]
[connection signal="pressed" from="Control/Panel/choices/accept_choice" to="." method="_on_accept_choice_pressed"]
